--- a/my-site/app/globals.css
+++ b/my-site/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --foreground-rgb: 255, 255, 255;
-  --background-start-rgb: 255, 255, 255;
+  --background-start-rgb: 100, 100, 255;
   --background-end-rgb: 255, 255, 255;
 }
 
@@ -24,6 +24,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  height: 100vh; /* Set the height of the body to 100% of the viewport height */
+  margin: 0; /* Remove any default margin */
 }
 
 @layer utilities {
